# xenon

./: .gitignore  Cargo.toml  README.md  build  push
docs/: CNAME  cargo.md  index.md  rust.md
src/: gen_rand_nu.rs  main.rs
